--- a/testegerenc/src/main/java/viewprod/prodview.form
+++ b/testegerenc/src/main/java/viewprod/prodview.form
@@ -73,10 +73,10 @@
                           <Component id="atualizar" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="listar" min="-2" pref="126" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                           <Component id="excluir" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-                          <Component id="jButton1" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -95,12 +95,12 @@
                   <Component id="painelopcoes" min="-2" max="-2" attributes="0"/>
                   <EmptySpace pref="135" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jButton1" max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="excluir" max="32767" attributes="0"/>
-                          <Component id="incluir" max="32767" attributes="0"/>
-                          <Component id="atualizar" max="32767" attributes="0"/>
-                          <Component id="listar" max="32767" attributes="0"/>
+                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <Component id="incluir" max="32767" attributes="0"/>
+                      <Component id="atualizar" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="listar" alignment="3" max="32767" attributes="0"/>
+                          <Component id="excluir" alignment="3" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
@@ -173,7 +173,7 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="digidescricao" min="-2" pref="215" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="90" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -287,7 +287,7 @@
               <Font name="Segoe UI Light" size="12" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\marcelopc\Documents\testeimg\incluir.jpg"/>
+              <Image iconType="3" name="/incluir.jpg"/>
             </Property>
             <Property name="text" type="java.lang.String" value="INCLUIR"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
@@ -304,7 +304,7 @@
               <Font name="Segoe UI Light" size="12" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\marcelopc\Documents\testeimg\atualizar.jpg"/>
+              <Image iconType="3" name="/atualizar.jpg"/>
             </Property>
             <Property name="text" type="java.lang.String" value="ATUALIZAR"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
@@ -321,7 +321,7 @@
               <Font name="Segoe UI Light" size="12" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\marcelopc\Documents\testeimg\listar.jpg"/>
+              <Image iconType="3" name="/listar.jpg"/>
             </Property>
             <Property name="text" type="java.lang.String" value="LISTAR"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
@@ -338,7 +338,7 @@
               <Font name="Segoe UI Light" size="12" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\marcelopc\Documents\testeimg\excluir.jpg"/>
+              <Image iconType="3" name="/excluir.jpg"/>
             </Property>
             <Property name="text" type="java.lang.String" value="EXCLUIR"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
@@ -372,7 +372,7 @@
               <Font name="Segoe UI Light" size="12" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\marcelopc\Documents\testeimg\cancel.jpg"/>
+              <Image iconType="3" name="/cancel.jpg"/>
             </Property>
             <Property name="text" type="java.lang.String" value="CANCELAR"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
